[package]
name = "msedgedriver-manifest-cache"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
anyhow = { version = "1" }
quick-xml = { version = "0.25", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
ureq = { version = "2" }
