[[bin]]
name = "msedgedriver-manifest-cache"
path = "Source/main.rs"

[dependencies]
anyhow = "1"
quick-xml = { version = "0.25", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"

[package]
edition = "2021"
license-file = "LICENSE"
name = "msedgedriver-manifest-cache"
version = "0.1.0"
